--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <button class="tab-btn" data-tab="summarySection">📊 Summary</button>
   </div>
 
-  <!-- 🔹 Sections (empty, will be rendered by ui.js) -->
+  <!-- 🔹 Sections (will be filled by JS) -->
   <section id="fuelSection" class="tab-content"></section>
   <section id="costSection" class="tab-content" style="display:none;"></section>
   <section id="summarySection" class="tab-content" style="display:none;"></section>
@@ -25,7 +25,6 @@
   <div id="toast" class="toast"></div>
   <div id="syncStatus" class="sync-status"></div>
 
-  <!-- Scripts -->
   <!-- XLSX library for spreadsheet export -->
   <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
   <!-- Main app script as ES module -->
