--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <button class="tab-btn" data-tab="summarySection">📊 Summary</button>
   </div>
 
-  <!-- 🔹 Sections (will be filled by JS) -->
+  <!-- 🔹 Sections (empty, will be rendered by JS) -->
   <section id="fuelSection" class="tab-content"></section>
   <section id="costSection" class="tab-content" style="display:none;"></section>
   <section id="summarySection" class="tab-content" style="display:none;"></section>
